Renamed GTK-Wimp to MS-Windows Engine

--- a/modules/engines/ms-windows/Makefile.msc
+++ b/modules/engines/ms-windows/Makefile.msc
@@ -1,6 +1,6 @@
 # Makefile.msc -- Makefile for MS-VC++ (-*- makefile -*-)
 #
-# Copyright (C) 2003 Raymond Penners <raymond@dotsphinx.com>
+# Copyright (C) 2003, 2004 Raymond Penners <raymond@dotsphinx.com>
 #
 # $Id$
 
@@ -8,12 +8,12 @@
 
 ##
 # Target
-TARGET=libwimp.dll
+TARGET=libms-windows-engine.dll
 
 OBJS = \
-	wimp_style.obj \
-	wimp_theme_main.obj \
-	wimp_rc_style.obj \
+	msw_style.obj \
+	msw_theme_main.obj \
+	msw_rc_style.obj \
 	xp_theme.obj
 
 ##
@@ -65,7 +65,7 @@ $(TARGET): $(OBJS)
 	link $(LDFLAGS) $(LIBS) /OUT:$@ $(OBJS)
 
 install: $(TARGET)
-	copy libwimp.dll "$(INSTALL_DIR)"
+	copy $(TARGET) "$(INSTALL_DIR)"
 
 clean:
 	del *.obj *.dll *.exp *.lib
