handle gdk*alias.def
2005-03-18  Hans Breuer  <hans@breuer.org>

	* gdk/makefile.msc gdk-pixbuf/makefile.msc : handle gdk*alias.def

	* gdk/makefile.msc.in : add gtkmnemonichash.obj

	* test/testgtk.c(set_parent_signal) : use g_message instead of
	g_print to keep the 'testgtk --bench=all' output clean

--- a/gdk-pixbuf/makefile.msc
+++ b/gdk-pixbuf/makefile.msc
@@ -72,6 +72,13 @@ gdk-pixbuf-marshal.c: gdk-pixbuf-marshal.h gdk-pixbuf-marshal.list
 gdk-pixbuf-alias.h: gdk-pixbuf.symbols
 	perl makegdkpixbufalias.pl < gdk-pixbuf.symbols > gdk-pixbuf-alias.h
 
+gdk_pixbuf.def: gdk-pixbuf.symbols 
+	echo EXPORTS > gdk_pixbuf.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 gdk-pixbuf.symbols >> gdk_pixbuf.def
+
+gdk-pixbuf-aliasdef.c: gdk-pixbuf.symbols
+	 perl makegdkpixbufalias.pl -def < gdk-pixbuf.symbols > gdk-pixbuf-aliasdef.c
+
 ## common stuff
 
 INSTALL = copy
@@ -87,6 +94,7 @@ sub-pixops :
 all : \
 	$(PRJ_TOP)\config.h \
 	gdk-pixbuf-alias.h \
+	gdk-pixbuf-aliasdef.c \
 	gdk-pixbuf-marshal.h \
 	gdk-pixbuf-marshal.c \
 	sub-pixops \
