--- a/gtk/makefile.msc.in
+++ b/gtk/makefile.msc.in
@@ -160,6 +160,7 @@ gtk_OBJECTS = 					\
 	gtkmenutoolbutton.obj	\
 	gtkmessagedialog.obj			\
 	gtkmisc.obj				\
+	gtkmnemonichash.obj	\
 	gtkmodules.obj	\
 	gtknotebook.obj				\
 	gtkobject.obj				\
@@ -500,8 +501,8 @@ gtk-win32.res : gtk-win32.rc
 #
 libgtk-win32-$(GTK_VER)-0.dll : $(gtk_OBJECTS) gtk.def gtk-win32.res
 	$(CC) $(CFLAGS) -LD -Fm -Fe$@ $(gtk_OBJECTS) gtk-win32.res \
-	$(GDK_LIBS) $(GDK_PIXBUF_LIBS) $(PANGO_LIBS) $(INTL_LIBS) $(GLIB_LIBS) \
-	gdi32.lib user32.lib advapi32.lib wsock32.lib shell32.lib \
+	$(GDK_LIBS) $(GDK_PIXBUF_LIBS) $(PANGO_LIBS) $(INTL_LIBS) $(GLIB_LIBS) $(GMODULE_LIBS) \
+	gdi32.lib user32.lib advapi32.lib wsock32.lib shell32.lib ole32.lib \
 	$(LDFLAGS) /implib:gtk-win32-$(GTK_VER).lib /def:gtk.def
 
 gtk-win32-$(GTK_VER)s.lib : $(gtk_OBJECTS)
