The state should be the pre-event state. (#169753)
	* gdk/win32/gdkevents-win32.c (build_pointer_event_state): The
	state should be the pre-event state. (#169753)

--- a/configure.in
+++ b/configure.in
@@ -143,6 +143,7 @@ if test "$os_win32" = "yes"; then
   enable_shared=yes
 fi
 
+AC_LIBTOOL_WIN32_DLL
 AM_PROG_LIBTOOL
 
 # Make sure we use 64-bit versions of various file stuff.
