follow .symbols changes
2005-04-03  Hans Breuer  <hans@breuer.org>

	* makefile.msc : follow .symbols changes

--- a/gdk-pixbuf/makefile.msc
+++ b/gdk-pixbuf/makefile.msc
@@ -74,7 +74,7 @@ gdk-pixbuf-alias.h: gdk-pixbuf.symbols
 
 gdk_pixbuf.def: gdk-pixbuf.symbols 
 	echo EXPORTS > gdk_pixbuf.def
-	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 gdk-pixbuf.symbols >> gdk_pixbuf.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DALL_FILES gdk-pixbuf.symbols >> gdk_pixbuf.def
 
 gdk-pixbuf-aliasdef.c: gdk-pixbuf.symbols
 	 perl makegdkpixbufalias.pl -def < gdk-pixbuf.symbols > gdk-pixbuf-aliasdef.c
