let dash_offset shift the start of the line pattern not the start of the
2005-04-03  Hans Breuer  <hans@breuer.org>

	* gdk/win32/gdkdrawable-win32.c : let dash_offset shift the start of
	the line pattern not the start of the line. Fixes bug #171641.

	* gtk/makefile.msc.in : follow .symbols changes

--- a/gtk/makefile.msc.in
+++ b/gtk/makefile.msc.in
@@ -444,12 +444,15 @@ GENERATED = \
 generated : $(GENERATED)
 	$(TOUCH) generated
 
-gtk.def: gtk.symbols
+gtk.def: gtk.symbols makefile.msc
 	echo EXPORTS > gtk.def
-	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 gtk.symbols >> gtk.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DALL_FILES gtk.symbols >> gtk.def
 
 gtkalias.h: gtk.symbols
 	cl /EP -DG_OS_WIN32 -DGTK_WINDOWING_WIN32 -DINCLUDE_INTERNAL_SYMBOLS gtk.symbols | $(PERL) makegtkalias.pl > gtkalias.h
+
+gtkaliasdef.c : gtk.symbols
+	 perl makegtkalias.pl -def < gtk.symbols > gtkaliasdef.c
 
 # generate type identifier header (GTK_TYPE_WIDGET_FLAGS)
 # use 'echo' to work around 'command line too long'
