[merged from gtk-2-6 branch] let dash_offset shift the start of the line
2005-04-03  Hans Breuer  <hans@breuer.org>

	[merged from gtk-2-6 branch]
	* gdk/win32/gdkdrawable-win32.c : let dash_offset shift the start of
	the line pattern not the start of the line. Fixes bug #171641.

	* gtk/makefile.msc.in : follow .symbols changes

	* gdk/win32/gdkwindow-win32.c : declare and resolve GetAncestor()
	dynamically. (It is not available in _WIN_VER <= 0x0400)

	* gdk/win32/makefile.msc : removed gdkpango-win32.obj

	* gtk/gtkhsv.c gtk/gtkstyle.c : use G_PI instead of M_PI

	[also applied to gtk-2-6 branch]
	* gdk/makefile.msc gdk-pixbuf/makefile.msc : handle gdk*alias.def

	* gdk/makefile.msc.in : add gtkmnemonichash.obj

	* test/testgtk.c(set_parent_signal) : use g_message instead of
	g_print to keep the 'testgtk --bench=all' output clean

--- a/gdk/makefile.msc
+++ b/gdk/makefile.msc
@@ -48,7 +48,8 @@ CFLAGS = -FImsvc_recommended_pragmas.h -I . -I .. \
 
 EXTRALIBS = $(WTKIT)\lib\i386\wntab32x.lib $(GLIB_LIBS) \
 		..\gdk-pixbuf\gdk_pixbuf-$(GDK_PIXBUF_VER).lib \
-		$(PANGOWIN32_LIBS) $(INTL_LIBS) $(CAIRO_LIBS) 
+		$(PANGOWIN32_LIBS) $(INTL_LIBS) $(CAIRO_LIBS) \
+		$(PANGOCAIRO_LIBS)
 
 gdk-win32-backend :
 	cd win32
@@ -59,6 +60,7 @@ all: \
 	..\config.h \
 	gdkconfig.h \
 	gdkalias.h \
+	gdkaliasdef.c \
 	gdkenumtypes.h \
 	gdkenumtypes.c \
 	gdkmarshalers.h \
@@ -146,9 +148,12 @@ gdkconfig.h : gdkconfig.h.win32
 gdkalias.h: gdk.symbols
 	perl makegdkalias.pl < gdk.symbols > gdkalias.h
 
+gdkaliasdef.c: gdk.symbols
+	 perl makegdkalias.pl -def < gdk.symbols > gdkaliasdef.c
+
 gdk.def: gdk.symbols
 	echo EXPORTS > gdk.def
-	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DGDK_WINDOWING_WIN32 gdk.symbols >> gdk.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DGDK_WINDOWING_WIN32 -DALL_FILES gdk.symbols >> gdk.def
 
 libgdk-win32-$(GTK_VER)-0.dll : $(gdk_OBJECTS) gdk.def win32\gdk-win32.lib
 	$(CC) $(CFLAGS) -LD -Fe$@ $(gdk_OBJECTS) win32\gdk-win32.lib $(EXTRALIBS) \
