--- a/gdk-pixbuf/makefile.msc
+++ b/gdk-pixbuf/makefile.msc
@@ -72,10 +72,14 @@ gdk-pixbuf-marshal.c: gdk-pixbuf-marshal.h gdk-pixbuf-marshal.list
 gdk-pixbuf-alias.h: gdk-pixbuf.symbols
 	perl makegdkpixbufalias.pl < gdk-pixbuf.symbols > gdk-pixbuf-alias.h
 
-gdk_pixbuf.def: gdk-pixbuf.symbols 
+gdk_pixbuf.def: gdk-pixbuf.symbols makefile.msc
 	echo EXPORTS > gdk_pixbuf.def
-	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 gdk-pixbuf.symbols >> gdk_pixbuf.def
+	cl /EP -DINCLUDE_VARIABLES -DG_OS_WIN32 -DALL_FILES \
+#	-FI $(GLIB)\glib\gmacros.h \
+	gdk-pixbuf.symbols >> gdk_pixbuf.def
 
+gdk-pixbuf-aliasdef.c: gdk-pixbuf.symbols
+	 perl makegdkpixbufalias.pl -def < gdk-pixbuf.symbols > gdk-pixbuf-aliasdef.c
 
 ## common stuff
 
@@ -92,6 +96,7 @@ sub-pixops :
 all : \
 	$(PRJ_TOP)\config.h \
 	gdk-pixbuf-alias.h \
+	gdk-pixbuf-aliasdef.c \
 	gdk-pixbuf-marshal.h \
 	gdk-pixbuf-marshal.c \
 	sub-pixops \
