--- a/docs/reference/gdk/Makefile.am
+++ b/docs/reference/gdk/Makefile.am
@@ -28,6 +28,7 @@ IGNORE_HFILES=			\
 	gdkprivate.h		\
 	gdkpoly-generic.h	\
 	gdkregion-generic.h	\
+	keyname-table.h		\
 	linux-fb 		\
 	nanox 			\
 	win32 			\
