Use gtk-doc abbrevs instead of spelled out links.
2005-05-16  Matthias Clasen  <mclasen@redhat.com>

	* gtk/tree_widget.sgml: Use gtk-doc abbrevs instead of
	spelled out links.

	* gtk/gtk-docs.sgml: Included the processed file xml/tree_widget.sgml.

	* gtk/Makefile.am (expand_content_files): Add tree_widget.sgml.

--- a/docs/reference/gtk/Makefile.am
+++ b/docs/reference/gtk/Makefile.am
@@ -110,6 +110,9 @@ content_files =					\
 	gtk-update-icon-cache.xml		\
 	visual_index.xml
 
+expand_content_files = 				\
+	tree_widget.sgml		
+
 # Images to copy into HTML directory
 HTML_IMAGES = \
 	$(top_srcdir)/gtk/stock-icons/stock_about_24.png		\
