Add a demo showing all picker widgets.
2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/Makefile.am (demos):
	* demos/gtk-demo/pickers.c: Add a demo showing all picker widgets.

--- a/demos/gtk-demo/Makefile.am
+++ b/demos/gtk-demo/Makefile.am
@@ -21,6 +21,7 @@ demos =						\
 	list_store.c				\
 	menus.c					\
 	panes.c					\
+	pickers.c				\
 	pixbufs.c				\
 	rotated_text.c				\
 	sizegroup.c				\
