Add a demo showing combo box variations.
2005-05-25  Matthias Clasen  <mclasen@redhat.com>

	* demos/gtk-demo/Makefile.am (demos):
	* demos/gtk-demo/combobox.c: Add a demo showing combo box
	variations.

--- a/demos/gtk-demo/Makefile.am
+++ b/demos/gtk-demo/Makefile.am
@@ -10,6 +10,7 @@ demos =						\
 	changedisplay.c				\
 	clipboard.c				\
 	colorsel.c				\
+	combobox.c				\
 	dialog.c				\
 	drawingarea.c				\
 	editable_cells.c			\
