Render insensitive icons in a way that more closely matches Windows.
2005-06-04  Tor Lillqvist  <tml@novell.com>

	* modules/engines/ms-windows/msw_style.c: Render insensitive icons
	in a way that more closely matches Windows. (#305986, Tim Evans).

	* modules/engines/ms-windows/Makefile.am (LDADDS): Link with
	gdk-pixbuf.

--- a/modules/engines/ms-windows/Makefile.am
+++ b/modules/engines/ms-windows/Makefile.am
@@ -13,6 +13,7 @@ INCLUDES = \
 
 
 LDADDS = \
+	$(top_builddir)/gdk-pixbuf/libgdk_pixbuf-2.0.la	\
 	$(top_builddir)/gdk/$(gdktargetlib)		\
 	$(top_builddir)/gtk/$(gtktargetlib)		\
 	$(GTK_DEP_LIBS)
