added cairo to list of $GTK_PACKAGES.
2005-06-09  Rodrigo Moya <rodrigo@novell.com>

	* configure.in: added cairo to list of $GTK_PACKAGES.

--- a/configure.in
+++ b/configure.in
@@ -1497,7 +1497,7 @@ else
         LIBS="$gtk_save_LIBS"
 fi
 
-GTK_PACKAGES=atk
+GTK_PACKAGES="atk cairo"
 GTK_EXTRA_LIBS=
 GTK_EXTRA_CFLAGS= 
 GTK_DEP_LIBS="$GDK_EXTRA_LIBS $GTK_DEP_LIBS_FOR_X `$PKG_CONFIG --libs $GDK_PIXBUF_PACKAGES $GDK_PACKAGES $GTK_PACKAGES` $GTK_EXTRA_LIBS $GDK_PIXBUF_EXTRA_LIBS"
