Add -DHPPEX -DSHMLINK to CFLAGS for HP-UX. (#162979, Paul Cornett)
2005-07-07  Matthias Clasen  <mclasen@redhat.com>

	* configure.in: Add -DHPPEX -DSHMLINK to CFLAGS for HP-UX.
	(#162979, Paul Cornett)

--- a/configure.in
+++ b/configure.in
@@ -463,6 +463,20 @@ case $host in
   ;;
 esac
 
+#
+# see bug 162979
+#
+AC_MSG_CHECKING(for HP-UX)
+case $host_os in
+  hpux9* | hpux10* | hpux11*)
+    AC_MSG_RESULT(yes)
+    CFLAGS="$CFLAGS -DHPPEX -DSHMLINK"
+  ;;
+  *)
+    AC_MSG_RESULT(no)
+  ;;
+esac
+
 dnl NeXTStep cc seems to need this
 AC_MSG_CHECKING([for extra flags for POSIX compliance])
 AC_TRY_COMPILE([#include <dirent.h>], [DIR *dir;],
